# aventi

./: .env.example  .gitignore  .npmrc  AGENTS.md  App.tsx  DESIGN.md  Makefile  README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
components/: Account.tsx  Auth.tsx  Avatar.js  Component.tsx
services/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  package.json  pyproject.toml
services/backend/src/aventi_backend/: app.py  main.py
services/backend/src/aventi_backend/api/: lambda_handler.py  router.py
services/backend/src/aventi_backend/api/routes/: admin.py  events.py  favorites.py  feed.py  health.py  internal.py  me.py  membership.py  swipes.py
services/backend/src/aventi_backend/cli/: __init__.py  enqueue_market_warmups.py  manual_ingest.py
services/backend/src/aventi_backend/core/: auth.py  logging.py  settings.py
services/backend/src/aventi_backend/db/: deps.py  feed_query.py  repository.py  session.py
services/backend/src/aventi_backend/models/: schemas.py
services/backend/src/aventi_backend/services/: constants.py  event_images.py  feed.py  gemini.py  ingest.py  jobs.py  market_inventory.py  og_scraper.py  personalization.py  providers.py  storage.py  verification.py
services/backend/src/aventi_backend/worker/: handlers.py  lambda_handler.py  main.py  scheduler.py
services/backend/tests/: test_auth_e2e_supabase_local.py  test_health.py  test_jobs_ingest_verification.py  test_manual_ingest_cli.py  test_postgres_repository.py  test_v1_routes.py
(+85 files in other folders)
