[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aventi-backend"
version = "0.1.0"
description = "Aventi FastAPI backend and worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "structlog>=24.4.0,<25.0.0",
  "google-genai>=1.66.0",
  "boto3>=1.35.0,<2.0.0",
  "mangum>=0.17.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "ruff>=0.8.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0"
]

[project.scripts]
aventi-enqueue-market-warmups = "aventi_backend.cli.enqueue_market_warmups:main"


[tool.hatch.build.targets.wheel]
packages = ["src/aventi_backend"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true

[dependency-groups]
dev = []
